fix: Fix the margin gap between the header and the dropdown navbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -302,7 +302,7 @@ li {
 .preview-header {
     position: sticky;
     z-index: 101;
-    top: -1px;
+    top: -3px;
     background: var(--nav-bg);
     padding: 1rem 0 1rem 0;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -567,7 +567,7 @@ li {
     .toggle-nav {
         z-index: 99;
         position: fixed;
-        top: -1px;
+        top: -3px;
         width: 100%;
         display: flex;
         flex-direction: row;
